# FRA532_EXAM1

./: README.md  Tim.md  frames_2025-03-10_08.47.39.gv  temp.md
src/dd_controller/: CMakeLists.txt  package.xml
src/dd_controller/config/: amcl_cfg.yaml  param.yaml  params.yaml  rviz_cdf.rviz  test.yaml
src/dd_controller/launch/: controller.launch.py  load_map_rviz.launch.py  loc_map.launch.py  temp.launch.py  test.launch.py
src/dd_controller/map/: map.pgm  map.yaml
src/dd_controller/rviz/: map_cfg.rviz  navigation.rviz  rviz_cfg.rviz
src/dd_controller/scripts/: astar_global.py  dummy_script.py  dwa_local.py  dwa_local_dev.py  global_costmap_node.py  local_costmap_node.py  local_costmap_node1.py  local_planner.py  odom_test.py  pure_pursuit_controller.py  sampling_predictive_controller.py  sbmpo_controller.py  teb_controller.py
src/dd_controller/src/: a_star_global_planner.cpp  cpp_node.cpp  rrt_planner.cpp
src/fra532_gazebo/: CMakeLists.txt  package.xml
src/fra532_gazebo/launch/: sim.launch.py
src/fra532_gazebo/scripts/: dummy_script.py
src/fra532_gazebo/src/: cpp_node.cpp
src/fra532_nav/: CMakeLists.txt  package.xml
src/fra532_nav/launch/: navigation.launch.py
src/fra532_nav/maps/: map.pgm  map.yaml  map_nav.pgm  map_nav.yaml
src/fra532_nav/params/: basic_params.yaml
src/fra532_nav/scripts/: dummy_script.py  inspection_demo.py  nav_through_poses_demo.py
src/fra532_nav/src/: cpp_node.cpp
src/fra532_slam/: CMakeLists.txt  package.xml
src/fra532_slam/launch/: mapping.launch.py
src/fra532_slam/rviz/: mapping.rviz
src/fra532_slam/scripts/: dummy_script.py
src/fra532_slam/src/: cpp_node.cpp
